// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MeasurementReading Renders MeasurementReadingUnit if unit is provided 1`] = `
<Fragment>
  <div
    className="measurement__reading"
  >
    1.23
    <MeasurementReadingUnit
      unit="PRESSURE_PA"
    />
  </div>
</Fragment>
`;

exports[`MeasurementReading renders correctly 1`] = `
<Fragment>
  <div
    className="measurement__reading"
  >
    1
  </div>
</Fragment>
`;

exports[`MeasurementReading renders correctly without formatter 1`] = `
<Fragment>
  <div
    className="measurement__reading"
  >
    1.23
  </div>
</Fragment>
`;

exports[`MeasurementReading renders passed children 1`] = `
<Fragment>
  <div
    className="measurement__reading"
  >
    1.23
    <div>
      A children node
    </div>
  </div>
</Fragment>
`;
